# coolkey

./: Makefile.am  configure.ac
aclocal/: Makefile.am
src/coolkey/: Makefile.am
src/install/: Makefile.am
src/libckyapplet/: Makefile.am  dynlink_win.c
